6-ingress/be.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: backend
  template:
    metadata: 
      labels: 
        app: backend
    spec:
      containers:
      - name: backend-pod
        image: backend-image
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-Service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
     targetPort: 80
  type: ClusterIP
