6-ingress/fe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata: 
      labels: 
        app: frontend
    spec:
      containers:
      - name: frontend-pod
        image: frontend-image
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-Service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
