6-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-cluster 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx ### nginx, caddy, haproxy (any reverse proxy files)
  rules:
  - host: domainname.com
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-Service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-Service
            port:
              number: 80
